# dagster-for-work

./: .gitignore  main.py  pyproject.toml
pricelist/: README.md  pyproject.toml  setup.cfg  setup.py
pricelist/pricelist/: assets.py  definitions.py  pricelist_pipeline.py
pricelist_pipeline/: filesystem_pipeline.py  requirements.txt
