[project]
name = "dagster-dlt-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.10.11",
    "dagster-embedded-elt>=0.26.11",
    "dlt[duckdb,filesystem]>=1.9.0",
    "fastexcel>=0.13.0",
    "polars>=1.27.1",
]
