[project]
name = "pricelist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dlt>=0.26.11",
    "dagster-duckdb>=0.26.12",
    "dagster-embedded-elt>=0.26.11",
    "dagster-webserver>=1.10.11",
    "dlt[duckdb]>=1.9.0",
    "fastexcel>=0.13.0",
    "polars>=1.27.1",
    "xmltodict>=0.14.2",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "pricelist.definitions"
code_location_name = "pricelist"

[tool.setuptools.packages.find]
exclude=["pricelist_tests"]
